Use specific PragmataPro ligature mode

--- a/custom.org
+++ b/custom.org
@@ -1169,42 +1169,13 @@ function.
       :bind (:map latex-mode-map ("C-j" . join-line)))
   #+END_SRC
 
-* =ligature.el=
+* ligature-pragmatapro
 
   #+BEGIN_SRC emacs-lisp
-    (use-package ligature
+    (use-package ligature-pragmatapro
       :ensure t
       :config
-      (ligature-set-ligatures 'prog-mode '("[ERROR]" "[DEBUG]" "[INFO]" "[WARN]" "[WARNING]"
-                                           "[ERR]" "[FATAL]" "[TRACE]" "[FIXME]" "[TODO]"
-                                           "[BUG]" "[NOTE]" "[HACK]" "[MARK]"
-                                           "# ERROR" "# DEBUG" "# INFO" "# WARN" "# WARNING"
-                                           "# ERR" "# FATAL" "# TRACE" "# FIXME" "# TODO"
-                                           "# BUG" "# NOTE" "# HACK" "# MARK"
-                                           "// ERROR" "// DEBUG" "// INFO" "// WARN" "// WARNING"
-                                           "// ERR" "// FATAL" "// TRACE" "// FIXME" "// TODO"
-                                           "// BUG" "// NOTE" "// HACK" "// MARK"
-                                           "!!" "!=" "!==" "!!!" "!≡" "!≡≡" "!>" "!=<" "#("
-                                           "#_" "#{" "#?" "#>" "##" "#_(" "%=" "%>" "%>%" "%<%"
-                                           "&%" "&&" "&*" "&+" "&-" "&/" "&=" "&&&" "&>" "$>"
-                                           "***" "*=" "*/" "*>" "++" "+++" "+=" "+>" "++=" "--"
-                                           "-<" "-<<" "-=" "->" "->>" "---" "-->" "-+-" "-\\/"
-                                           "-|>" "-<|" ".." "..." "..<" ".>" ".~" ".=" "/*" "//"
-                                           "/>" "/=" "/==" "///" "/**" ":::" "::" ":=" ":≡" ":>"
-                                           ":=>" ":(" ":-(" ":)" ":-)" ":/" ":\\" ":3" ":D" ":P"
-                                           ":>:" ":<:" "<$>" "<*" "<*>" "<+>" "<-" "<<" "<<<" "<<="
-                                           "<=" "<=>" "<>" "<|>" "<<-" "<|" "<=<" "<~" "<~~" "<<~"
-                                           "<$" "<+" "<!>" "<@>" "<#>" "<%>" "<^>" "<&>" "<?>" "<.>"
-                                           "</>" "<\\>" "<\">" "<:>" "<~>" "<**>" "<<^" "<!" "<@"
-                                           "<#" "<%" "<^" "<&" "<?" "<." "</" "<\\" "<\"" "<:" "<->"
-                                           "<!--" "<--" "<~<" "<==>" "<|-" "<<|" "<-<" "<-->" "<<=="
-                                           "<==" "=<<" "==" "===" "==>" "=>" "=~" "=>>" "=/=" "=~="
-                                           "==>>" "≡≡" "≡≡≡" "≡:≡" ">-" ">=" ">>" ">>-" ">>=" ">>>"
-                                           ">=>" ">>^" ">>|" ">!=" ">->" "??" "?~" "?=" "?>" "???"
-                                           "?." "^=" "^." "^?" "^.." "^<<" "^>>" "^>" "\\\\" "\\>"
-                                           "\\/-" "@>" "|=" "||" "|>" "|||" "|+|" "|->" "|-->" "|=>"
-                                           "|==>" "|>-" "|<<" "||>" "|>>" "|-" "||-" "~=" "~>" "~~>"
-                                           "~>>" "[[" "]]" "\">" "_|_"))
+      (ligature-pragmatapro-setup)
       (global-ligature-mode t))
   #+END_SRC
 
